@@ -449,7 +449,7 @@ TBD</blockquote>
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="schedule.rst">View document source</a>.
-Generated on: 2004/05/14 18:09:52 CDT.
+Generated on: 2004/05/17 16:56:19 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
