@@ -73,6 +73,11 @@ my @Tests = (
 	      cmd     => "./spawn2",
 	      checker => \&check_spawn2,
 	     },
+	     # Spawn test with member calls.
+	     {
+	      cmd     => "./spawn3",
+	      checker => \&check_spawn3,
+	     },
 	    );
 
 doTest(\@Tests);
@@ -263,26 +268,39 @@ sub check_channel {
 
 # Makes sure expected results are found.
 sub check_spawn {
-  my @lines = split /\n/,@_[0];
-  my @exp = @_;
+  my @lines = split /\n/,shift;
+  my @parms = @_;
+  my $expcount = scalar(@parms);
+  my $ix = 0;
   for (@lines) {
     if ( /^Result is:/ ) {
       my @res = ( /(\d+.\d+)/g );
-      for my $i (0..$#exp) {
-	if ($res[$i] != $exp[$i]) {
-	  die "Mismatch on result value $i (Found $res[$i], expected $exp[$i]).\n";
+      my $exp = $parms[$ix];
+      for my $i (0..scalar(@{$exp})-1) {
+	if ($res[$i] != $exp->[$i]) {
+	  die "Mismatch on result value $i (Found $res[$i], expected $exp->[$i]).\n";
 	}
       }
+      ++$ix;
     }
+  }
+  if ($ix != $expcount) {
+    die "Expected $expcount result lines, found $ix.\n";
   }
 }
 
 sub check_spawn1 {
   my @exp = ( 6.05, 103.33, 10103.1 );
-  check_spawn(@exp);
+  check_spawn($_[0], \@exp);
 }
 
 sub check_spawn2 {
   my @exp = ( 6.05, 103.33, 10103.1, 3.14159 );
-  check_spawn(@exp);
+  check_spawn($_[0], \@exp);
+}
+
+sub check_spawn3 {
+  my @exp1 = ( 6.05, 103.33, 10103.0906, 3.14159 );
+  my @exp2 = ( 25, 50100.05, 3.14159 );
+  check_spawn($_[0], \@exp1,\@exp2);
 }
