@@ -1,5 +1,7 @@
 2004-05-17  Brian Kahne  <bkahne@ibmoto.com>
 
+	* Added support to spawn for handling member calls.
+
 	* Initial implementation of spawn operator.  It currently only
 	processes function calls.
 
